<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewItemActivity">
    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/background"
        android:padding="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:padding="30dp"
            android:text="@string/new_item_title"/>
        <EditText
            android:id="@+id/itemName"
            android:hint="@string/stringItemName"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/itemPlace"
            android:hint="@string/stringItemPlace"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/itemYear"
            android:hint="@string/stringItemYear"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/itemCode"
            android:hint="@string/stringItemCode"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/itemDesc"
            android:hint="@string/stringItemDesc"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/itemPrice"
            android:hint="@string/stringItemPrice"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_reset"
                android:text="@string/btnReset"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_back"
                android:text="@string/btnBack"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_submit"
                android:text="@string/btnAdd"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>