<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ShowItemActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/stringItemName"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/placeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/stringItemPlace"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/yearTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/stringItemYear"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/codeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeTextView" />

    <TextView
        android:id="@+id/codeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/stringItemCode"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/descTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView" />

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/stringItemDesc"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/priceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeTextView" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/stringItemPrice"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/linlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTextView" />

    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnUpdate"
            android:text="@string/btnUpdate"
            android:textColor="@color/textColor"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnBack"
            android:text="@string/btnBack"
            android:textColor="@color/textColor"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
